objects/PriceBookMapping__c.object
<CustomObject>
    <label>Price Book Mapping</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>PriceBookMappingRef</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Book Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Used in QS3 Integration</description>
        <label>PB Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceBook__c</fullName>
        <description>Price Book Name</description>
        <label>Price Book</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLTypeCode__c</fullName>
        <label>PLTypeCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
</CustomObject>